--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -3,7 +3,7 @@
   var muestras;
   var actual = 1;
   var peri = document.getElementById("peri");
-  var tipos = [true, false, false, false, false];
+  var tipos = [true, false, false, false, true];
   peri.style.display = "none";
   var tipoD = document.getElementById("tipoD");
   var tipoDSelected;
