--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -3,10 +3,9 @@
   var muestras;
   var actual = 1;
   var peri = document.getElementById("peri");
-  var tipos = [true, false, false, false, true];
+  var tipos = [true, false, false, false, false];
   peri.style.display = "none";
-  var tipoD = document.getElementById("tipoD");
-  var tipoDSelected;
+
   var periodo = document.getElementById("periodo");
   var periodoSelected;
   var fin = document.getElementById("fin");
@@ -87,17 +86,7 @@
       .second(seconds)
       .format(timeFormat);
   }
-  function getSelectedValues() {
-    var selectedVal = $("#tipoD").val();
-    for (var i = 0; i < selectedVal.length; i++) {
-      function innerFunc(i) {
-        setTimeout(function() {
-          location.href = selectedVal[i];
-        }, i * 2000);
-      }
-      innerFunc(i);
-    }
-  }
+
   function primera() {
     muestras = 50;
     fec = hoy();
@@ -135,8 +124,6 @@
     } else {
       fec = periodoSelected.value;
     }
-
-    tipoDSelected = tipoD.options[tipoD.selectedIndex];
 
     $.post("/updateStatistics", {
       tipo: tipos,
