--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -177,10 +177,7 @@
     console.log(results);
     var config = {
       type: "line",
-      data: {
-        labels: dameFecha(results.labels),
-        datasets: results.dataset
-      },
+      data: data,
       options: {
         tooltips: {
           callbacks: {
