--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -177,7 +177,7 @@
     console.log(results);
     var config = {
       type: "line",
-      data: results.data,
+      data: results.data[0],
       options: {
         tooltips: {
           callbacks: {
