--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -175,7 +175,12 @@
 
   function crea(results) {
     console.log(results);
+    console.log(results.fechas);
     console.log(results.data);
+    console.log(results.unidad);
+    console.log(results.colour);
+    console.log(results.titulo);
+
     var config = {
       type: "line",
       data: results.data,
