--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -173,17 +173,38 @@
     chart.update();
   }
 
+  function giveData(datas, fechas){
+    longitud = datas.length;
+    var result = [];
+    var fec = dameFecha(fechas);
+    for (var i = 0; i < longitud; i++) {
+      result[i] = {
+        x : fec[i] , y: datas[i]
+      }
+    }
+    return result;
+
+  function prepara(result){
+    var tipos = result.unidad.length;
+    var dato = [];
+    for (var i = 0; i < tipos; i++) {
+      var datos  = giveData(result.data[i], result.dechas[i]);
+      var s = {
+      label: result.titulo[i],
+      borderColor: results.colour[i],
+      backgroundColor: results.colour[i],
+      data: datos
+      };
+      dato[i] = s;
+    }
   function crea(results) {
     console.log(results);
-    console.log(results.fechas);
-    console.log(results.data);
-    console.log(results.unidad);
-    console.log(results.colour);
-    console.log(results.titulo);
+    dataset = prepara(results);
+    console.log(dataset);
 
     var config = {
       type: "line",
-      data: results.data,
+      data: {datasets : dataset},
       options: {
         tooltips: {
           callbacks: {
