--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -190,7 +190,7 @@
     var tipos = result.unidad.length;
     var dato = [];
     for (var i = 0; i < tipos; i++) {
-      var datos = giveData(result.data[i], result.dechas[i]);
+      var datos = giveData(result.data[i], result.fechas[i]);
       var s = {
         label: result.titulo[i],
         borderColor: results.colour[i],
