--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -193,8 +193,8 @@
       var datos = giveData(result.data[i], result.fechas[i]);
       var s = {
         label: result.titulo[i],
-        borderColor: results.colour[i],
-        backgroundColor: results.colour[i],
+        borderColor: result.colour[i],
+        backgroundColor: result.colour[i],
         data: datos
       };
       dato[i] = s;
