--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -202,7 +202,7 @@
   }
   function crea(results) {
     console.log(results);
-    dataset = prepara(results);
+    var dataset = prepara(results);
     console.log(dataset);
 
     var config = {
