--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -3,7 +3,7 @@
   var muestras;
   var actual = 1;
   var peri = document.getElementById("peri");
-  var tipos = [true, false, false, false, false];
+  var tipos = [true, true, false, false, false];
   peri.style.display = "none";
 
   var periodo = document.getElementById("periodo");
@@ -195,8 +195,9 @@
       var s = {
         label: result.titulo[i],
         borderColor: result.colour[i],
-        backgroundColor: result.colour[i],
-        data: datos
+        backgroundColor: result.colour[i].alpha(0.5).rgbString(),
+        data: datos,
+        fill: "false"
       };
       dato[i] = s;
     }
