--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -195,7 +195,7 @@
       var s = {
         label: result.titulo[i],
         borderColor: result.colour[i],
-        backgroundColor: result.colour[i].alpha(0.5).rgbString(),
+        backgroundColor: result.colour[i],
         data: datos,
         fill: "false"
       };
