--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -3,7 +3,7 @@
   var muestras;
   var actual = 1;
   var peri = document.getElementById("peri");
-  var tipos = [true, true, true, true, true];
+  var tipos = [true, false, false, false, false];
   peri.style.display = "none";
 
   var periodo = document.getElementById("periodo");
